--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@foliojs-fork/linebreak": "^1.1.1",
     "@foliojs-fork/pdfkit": "^0.13.0",
+    "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
     "xmldoc": "^1.1.2"
   },
@@ -57,7 +58,7 @@
     "build:vfs": "node build-vfs.js \"./examples/fonts\"",
     "build:examples": "node build-examples.js",
     "build:standard-fonts": "shx mkdir -p build/standard-fonts && brfs \"./src/browser-extensions/standard-fonts/Courier.js\" > build/standard-fonts/Courier.js && brfs \"./src/browser-extensions/standard-fonts/Helvetica.js\" > build/standard-fonts/Helvetica.js && brfs \"./src/browser-extensions/standard-fonts/Times.js\" > build/standard-fonts/Times.js && brfs \"./src/browser-extensions/standard-fonts/Symbol.js\" > build/standard-fonts/Symbol.js && brfs \"./src/browser-extensions/standard-fonts/ZapfDingbats.js\" > build/standard-fonts/ZapfDingbats.js",
-    "build:fonts": "shx mkdir -p build/fonts && shx mkdir -p build/fonts/Roboto && shx cp -r fonts/Roboto/*.* build/fonts/Roboto && brfs \"./src/browser-extensions/fonts/Roboto.js\" > build/fonts/Roboto.js",
+    "build:fonts": "shx mkdir -p build/fonts && shx mkdir -p build/fonts/THSarabunPSK && shx cp -r fonts/THSarabunPSK/*.* build/fonts/THSarabunPSK && brfs \"./src/browser-extensions/fonts/THSarabunPSK.js\" > build/fonts/THSarabunPSK.js",
     "lint": "eslint \"./src/**/*.js\" \"./tests/**/*.js\" \"./examples/**/*.js\" \"./standard-fonts/**/*.js\" \"./fonts/**/*.js\"",
     "mocha": "mocha --reporter spec \"./tests/**/*.spec.js\"",
     "playground": "node dev-playground/server.js"
